# docs/swagger.json
@@ -11,11 +11,53 @@
         "version": "1.0"
     },
     "paths": {
+        "/login": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "User login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.LoginParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/config.DataResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/items": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "ApiTokenAuth": []
                     }
                 ],
                 "description": "Find all",
@@ -42,6 +84,9 @@
                 "security": [
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "ApiTokenAuth": []
                     }
                 ],
                 "description": "Create a new item",
@@ -81,6 +126,9 @@
                 "security": [
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "ApiTokenAuth": []
                     }
                 ],
                 "description": "Find an item",
@@ -116,6 +164,9 @@
                 "security": [
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "ApiTokenAuth": []
                     }
                 ],
                 "description": "Update an item",
@@ -160,6 +211,9 @@
                 "security": [
                     {
                         "ApiKeyAuth": []
+                    },
+                    {
+                        "ApiTokenAuth": []
                     }
                 ],
                 "description": "Delete an item",
@@ -205,6 +259,17 @@
                     "type": "boolean"
                 },
                 "validate_error": {}
+            }
+        },
+        "controller.LoginParam": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
             }
         },
         "todomodel.CreateItem": {
